THRIFT-5138 Swift keywords may be used as identifiers if escaped Client: Swift Patch: Jano Svitok

This closes #2059